--- a/groupe.html
+++ b/groupe.html
@@ -137,7 +137,7 @@
                 <a href="" class="btn">Order food &#8594;</a>
             </div>
             <div class="col-4">
-                <img src="images(6).jpeg">
+                <img src="images (6).jpeg">
                 <h4>Coconut Pie</h4>
                 <div class="rating">&#x272E;&#x272E;&#x272E;&#x272E;</div>
                 <p>$1000 LD</p>
@@ -188,10 +188,11 @@
                         <p>Exclusively Available At M.S.H Home Food And Catering Group </p>
                         <h1>Food Is Life </h1>
                         <small>
-                                The Smart Apple Laptop features a 39.9% larger
-                                (than hp,dell Laptop) Amoled color full-touch display with
-                                adjustable brightness, so everthing is clear as can be.</small>
-                        <a href="" class="btn">Buy Now &#8594;</a>
+Our food are well preserved, hyginated and suitable for consumption.
+To get the best of your desire order from our site by clicking the button below.
+
+                        </small>
+                        <a href="" class="btn">Order &#8594;</a>
                     </div>
                 </div>
             </div>
