--- a/groupe.html
+++ b/groupe.html
@@ -182,16 +182,16 @@
             <div class="small-container">
                 <div class="row">
                     <div class="col-2">
-                        <img src="Images/IMG6.JPG" class="offer-two">
+                        <img src="Orange Juice (1).jpg" class="offer-two">
                     </div>
                     <div class="col-2">
                         <p>Exclusively Available At M.S.H Home Food And Catering Group </p>
                         <h1>Food Is Life </h1>
                         <small>
 Our food are well preserved, hyginated and suitable for consumption.
-To get the best of your desire order from our site by clicking the button below.
+To get the best of your desire order from our site by clicking the button below.<br>
 
-                        </small>
+               </small>
                         <a href="" class="btn">Order &#8594;</a>
                     </div>
                 </div>
