--- a/Product.html
+++ b/Product.html
@@ -15,10 +15,10 @@
         <br><br><br><br>
         <nav>
                 <p style="text-align: center; border: 5px;"> 
-                <a href="#"> <button>Home</button> </a> 
-                <a href="#"><button>About Us</button> </a>
+                <a href="groupe.html"> <button>Home</button> </a> 
+                <a href="GroupEight.html"><button>About Us</button> </a>
                 <a href="#"  > <button>Products</button></a>
-                <a href="#"><button>Contact Us</button></a>
+                <a href="Mailto:mesohntozay3@gmail.com"><button>Contact Us</button></a>
             </p>
             </nav>
             <br>
