--- a/GroupEight.HTML
+++ b/GroupEight.HTML
@@ -15,11 +15,11 @@
         <br><br><br><br>
         <nav>
                 <p style="text-align: center; border: 5px;"> 
-                <a href="#"> <button>Home</button> </a> 
-                <a href="#"><button>About Us</button> </a>  
-                <a href="#"><button>Contact Us</button></a>  
-                <a href="#"><button>Terms and Conditions</button></a>  
-                <a href="#"><button>Privacy Policy</button></a>  
+                <a href="groups.html"> <button>Home</button> </a> 
+                <a href="GroupEight.html"><button>About Us</button> </a>  
+                <a href="Mail to:mesohntozay3@gmail.com"><button>Contact Us</button></a>  
+                <a href="product.html"><button>Product</button></a>
+               
             </p>
             </nav>
             <br>
