--- a/GroupEight.HTML
+++ b/GroupEight.HTML
@@ -15,9 +15,9 @@
         <br><br><br><br>
         <nav>
                 <p style="text-align: center; border: 5px;"> 
-                <a href="groups.html"> <button>Home</button> </a> 
-                <a href="GroupEight.html"><button>About Us</button> </a>  
-                <a href="Mail to:mesohntozay3@gmail.com"><button>Contact Us</button></a>  
+                <a href="groupe.html"> <button>Home</button> </a> 
+                <a href="#"><button>About Us</button> </a>  
+                <a href="Mailto:mesohntozay3@gmail.com"><button>Contact Us</button></a>  
                 <a href="product.html"><button>Product</button></a>
                
             </p>
