--- a/GroupEight.HTML
+++ b/GroupEight.HTML
@@ -18,7 +18,7 @@
                 <a href="groupe.html"> <button>Home</button> </a> 
                 <a href="#"><button>About Us</button> </a>  
                 <a href="Mailto:mesohntozay3@gmail.com"><button>Contact Us</button></a>  
-                <a href="product.html"><button>Product</button></a>
+                <a href="Product.html"><button>Product</button></a>
                
             </p>
             </nav>
